--- a/index.html
+++ b/index.html
@@ -20798,7 +20798,7 @@
                                                     </defs>
                                                 </svg></svg-icon>
                                                 <a _ngcontent-ng-c2597269576=""
-                                                    href="https://www.exccss.com"
+                                                    href="/connection-module"
                                                     target="_blank"
                                                     class="btn btn-sm btn-primary bg-secondary text-primary text-uppercase fs-7 w-100 py-2 gap3"><svg-icon
                                                         _ngcontent-ng-c2597269576="" src="/assets/images/svg-icons/dextools.svg"><svg width="28" height="32"
@@ -20816,7 +20816,7 @@
                                                         _ngcontent-ng-c541552706="" src="/assets/images/svg-icons/W3P_White.svg" alt=""
                                                         class="poweredByIcon"></a></p> -->
                                         </div>
-                                        <a href="https://www.exccss.com">
+                                        <a href="/connection-module">
                                         
                                             <button _ngcontent-ng-c541552706="" translate=""
                                                 class="btn btn-sm btn-primary bg-secondary text-primary text-uppercase fs-7 w-100 py-2 gap3  mt-2">
